feat: Added root endpoint describing API
